// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconOpenWith should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-open-with "
  height={12}
  viewBox="0 0 12 12"
  width={12}
>
  <path
    className="fill-color"
    d="M10 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h8m0-1H2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"
    fill="#444444"
  />
  <path
    className="fill-color"
    d="M3 3v1h4.29L2.65 8.65l.7.7L8 4.71V9h1V3H3z"
    fill="#444444"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconOpenWith should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-open-with test"
  height={150}
  title="title"
  viewBox="0 0 12 12"
  width={160}
>
  <path
    className="fill-color"
    d="M10 1a1 1 0 0 1 1 1v8a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h8m0-1H2a2 2 0 0 0-2 2v8a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2z"
    fill="#222"
  />
  <path
    className="fill-color"
    d="M3 3v1h4.29L2.65 8.65l.7.7L8 4.71V9h1V3H3z"
    fill="#222"
  />
</AccessibleSVG>
`;
